--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@vime/core": "^5.3.1",
+    "@vime/react": "^5.3.1",
     "graphql": "^16.5.0",
+    "node-iframe": "^1.8.5",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-frame-component": "^5.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
