--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "graphql": "^16.5.0",
     "node-iframe": "^1.8.5",
     "phosphor-react": "^1.4.1",
+    "powerbi-client": "^2.21.1",
+    "powerbi-client-react": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-frame-component": "^5.2.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
@@ -28,5 +33,9 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/nadiduno/PortfolioNadi.git",
+  "author": "Nadi Duno <nadiduno@gmail.com>",
+  "license": "MIT"
 }
